[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/openvr_overlay/interaction/HandCollider.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/openvr_overlay/overlay_integration_root.gd" type="Script" id=2]
[ext_resource path="res://addons/godot-openvr/OpenVRController.gdns" type="Script" id=3]
[ext_resource path="res://addons/openvr_overlay/analog_handler.gd" type="Script" id=4]
[ext_resource path="res://addons/openvr_overlay/dpad_emulation.gd" type="Script" id=5]

[node name="OverlayInteractionRoot" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="VR" type="ARVROrigin" parent="."]
pause_mode = 2

[node name="left" type="ARVRController" parent="VR"]
pause_mode = 2
script = ExtResource( 3 )
button_actions = PoolStringArray( "/actions/godot/in/menu", "/actions/godot/in/touch", "/actions/godot/in/transparent_mode" )

[node name="HandCollider" parent="VR/left" groups=["left"] instance=ExtResource( 1 )]
collision_layer = 20

[node name="dpad_emulation" type="Node" parent="VR/left"]
script = ExtResource( 5 )

[node name="RayCast2" type="RayCast" parent="VR/left"]
enabled = true
exclude_parent = false
cast_to = Vector3( 0, -1000, -1000 )
collide_with_areas = true
collide_with_bodies = false

[node name="right" type="ARVRController" parent="VR"]
controller_id = 2
script = ExtResource( 3 )
button_actions = PoolStringArray( "/actions/godot/in/touch", "/actions/godot/in/transparent_mode" )

[node name="HandCollider" parent="VR/right" groups=["right"] instance=ExtResource( 1 )]
collision_layer = 10

[node name="RayCast1" type="RayCast" parent="VR/right"]
enabled = true
exclude_parent = false
cast_to = Vector3( 0, -1000, -1000 )
collide_with_areas = true
collide_with_bodies = false

[node name="analog_handler" type="Node" parent="VR/right"]
script = ExtResource( 4 )

[node name="head" type="ARVRCamera" parent="VR"]
visible = false

[connection signal="action_pressed" from="VR/left" to="." method="_on_left_action_pressed"]
[connection signal="action_released" from="VR/left" to="." method="_on_left_action_release"]
[connection signal="button_pressed" from="VR/left" to="." method="_on_left_button_pressed"]
[connection signal="action_pressed" from="VR/right" to="." method="_on_right_action_pressed"]
[connection signal="action_released" from="VR/right" to="." method="_on_right_action_released"]
[connection signal="button_pressed" from="VR/right" to="." method="_on_right_button_pressed"]
[connection signal="button_release" from="VR/right" to="." method="_on_right_button_release"]
